@@ -35,7 +35,13 @@ exclude_filename = MANIFEST.SKIP
 remove = Plack::Util
 remove = Plack::Util::Accessor
 
-[Prereqs]
+[Prereqs / BuildRequires ]
+-phase = build
+-relationship = requires
+ExtUtils::MakeMaker = 7.22
+Module::Metadata = 1.000015
+
+[Prereqs / DevelopRequires ]
 -phase = develop
 -relationship = requires
 Test::Vars = 0.015
